--- a/doc/agile/v1/sprint_backlog_19.org
+++ b/doc/agile/v1/sprint_backlog_19.org
@@ -12,28 +12,28 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-11-13 Wed 18:09]
+#+CAPTION: Clock summary at [2019-11-13 Wed 18:41]
 | <75>                                                      |         |       |       |       |
 | Headline                                                  | Time    |       |       |     % |
 |-----------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                              | *76:08* |       |       | 100.0 |
+| *Total time*                                              | *76:38* |       |       | 100.0 |
 |-----------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                   | 76:08   |       |       | 100.0 |
-| Active                                                    |         | 76:08 |       | 100.0 |
+| Stories                                                   | 76:38   |       |       | 100.0 |
+| Active                                                    |         | 76:38 |       | 100.0 |
 | Edit release notes for previous sprint                    |         |       |  3:36 |   4.7 |
 | Create a demo and presentation for previous sprint        |         |       |  1:39 |   2.2 |
 | Time spent producing coding videos                        |         |       |  1:56 |   2.5 |
-| Sprint and product backlog grooming                       |         |       |  6:09 |   8.1 |
+| Sprint and product backlog grooming                       |         |       |  6:09 |   8.0 |
 | Remove test model sanitizer                               |         |       |  0:20 |   0.4 |
 | Remove master headers                                     |         |       |  1:12 |   1.6 |
 | Fix the issues with tests in reference model              |         |       |  3:53 |   5.1 |
 | Update static strings to string views                     |         |       |  1:15 |   1.6 |
-| ODB include directories is incorrect                      |         |       |  1:43 |   2.3 |
-| Create a "modeling" report                                |         |       |  4:56 |   6.5 |
+| ODB include directories is incorrect                      |         |       |  1:43 |   2.2 |
+| Create a "modeling" report                                |         |       |  4:56 |   6.4 |
 | Move visual studio related options to top profile         |         |       |  0:17 |   0.4 |
 | Fix incorrect message keyword when detecting ODB includes |         |       |  0:29 |   0.6 |
-| Meta-data keys are in the inverse order                   |         |       |  0:39 |   0.9 |
-| Creating reference cycles produces strange errors         |         |       |  5:32 |   7.3 |
+| Meta-data keys are in the inverse order                   |         |       |  0:39 |   0.8 |
+| Creating reference cycles produces strange errors         |         |       |  5:32 |   7.2 |
 | Error on duplicate references                             |         |       |  0:26 |   0.6 |
 | Generate model dependency graph                           |         |       |  1:55 |   2.5 |
 | Make the building of the relational model conditional     |         |       |  0:23 |   0.5 |
@@ -43,11 +43,11 @@
 | Add support for meta-data overrides in Dogen              |         |       |  5:16 |   6.9 |
 | Time spent fixing emacs issues                            |         |       |  1:44 |   2.3 |
 | Move registrar into assets                                |         |       |  5:29 |   7.2 |
-| Upgrade to boost 1.70                                     |         |       | 10:00 |  13.1 |
+| Upgrade to boost 1.70                                     |         |       | 10:00 |  13.0 |
 | Setup laptop to work on dogen                             |         |       |  0:45 |   1.0 |
-| Org-mode as a carrier format for modeling                 |         |       |  5:37 |   7.4 |
+| Org-mode as a carrier format for modeling                 |         |       |  5:37 |   7.3 |
 | Add relational tracing support                            |         |       |  6:52 |   9.0 |
-| Split generated tests from manual tests                   |         |       |  3:07 |   4.1 |
+| Split generated tests from manual tests                   |         |       |  3:37 |   4.7 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -1194,6 +1194,7 @@ runs. The schema should be designed with this in mind.
 
 *** STARTED Split generated tests from manual tests                   :story:
     :LOGBOOK:
+    CLOCK: [2019-11-13 Wed 18:24]--[2019-11-13 Wed 18:41] =>  0:17
     CLOCK: [2019-11-13 Wed 18:10]--[2019-11-13 Wed 18:23] =>  0:13
     CLOCK: [2019-11-13 Wed 17:44]--[2019-11-13 Wed 18:09] =>  0:25
     CLOCK: [2019-11-13 Wed 08:22]--[2019-11-13 Wed 08:36] =>  0:14
@@ -1251,6 +1252,7 @@ Notes:
       builds CLI and calls gad with overrides. Then do a regular
       nightly. The git pull will do nothing (so we can't see what
       commits we have in the nightly).
+- check in the script for nightly builds.
 
 *Previous understanding*
 
