--- a/doc/agile/v1/sprint_backlog_19.org
+++ b/doc/agile/v1/sprint_backlog_19.org
@@ -12,42 +12,42 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-11-13 Wed 18:41]
+#+CAPTION: Clock summary at [2019-11-13 Wed 22:53]
 | <75>                                                      |         |       |       |       |
 | Headline                                                  | Time    |       |       |     % |
 |-----------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                              | *76:38* |       |       | 100.0 |
+| *Total time*                                              | *78:23* |       |       | 100.0 |
 |-----------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                   | 76:38   |       |       | 100.0 |
-| Active                                                    |         | 76:38 |       | 100.0 |
-| Edit release notes for previous sprint                    |         |       |  3:36 |   4.7 |
-| Create a demo and presentation for previous sprint        |         |       |  1:39 |   2.2 |
-| Time spent producing coding videos                        |         |       |  1:56 |   2.5 |
-| Sprint and product backlog grooming                       |         |       |  6:09 |   8.0 |
+| Stories                                                   | 78:23   |       |       | 100.0 |
+| Active                                                    |         | 78:23 |       | 100.0 |
+| Edit release notes for previous sprint                    |         |       |  3:36 |   4.6 |
+| Create a demo and presentation for previous sprint        |         |       |  1:39 |   2.1 |
+| Time spent producing coding videos                        |         |       |  2:11 |   2.8 |
+| Sprint and product backlog grooming                       |         |       |  6:09 |   7.8 |
 | Remove test model sanitizer                               |         |       |  0:20 |   0.4 |
-| Remove master headers                                     |         |       |  1:12 |   1.6 |
-| Fix the issues with tests in reference model              |         |       |  3:53 |   5.1 |
+| Remove master headers                                     |         |       |  1:12 |   1.5 |
+| Fix the issues with tests in reference model              |         |       |  3:53 |   5.0 |
 | Update static strings to string views                     |         |       |  1:15 |   1.6 |
 | ODB include directories is incorrect                      |         |       |  1:43 |   2.2 |
-| Create a "modeling" report                                |         |       |  4:56 |   6.4 |
+| Create a "modeling" report                                |         |       |  4:56 |   6.3 |
 | Move visual studio related options to top profile         |         |       |  0:17 |   0.4 |
 | Fix incorrect message keyword when detecting ODB includes |         |       |  0:29 |   0.6 |
 | Meta-data keys are in the inverse order                   |         |       |  0:39 |   0.8 |
-| Creating reference cycles produces strange errors         |         |       |  5:32 |   7.2 |
+| Creating reference cycles produces strange errors         |         |       |  5:32 |   7.1 |
 | Error on duplicate references                             |         |       |  0:26 |   0.6 |
-| Generate model dependency graph                           |         |       |  1:55 |   2.5 |
+| Generate model dependency graph                           |         |       |  1:55 |   2.4 |
 | Make the building of the relational model conditional     |         |       |  0:23 |   0.5 |
 | Make all transform contexts code-generated                |         |       |  0:08 |   0.2 |
 | Tracer numbering of dumped models is incorrect            |         |       |  0:26 |   0.6 |
 | Fix compilation errors in c++ impl nightly                |         |       |  0:24 |   0.5 |
-| Add support for meta-data overrides in Dogen              |         |       |  5:16 |   6.9 |
-| Time spent fixing emacs issues                            |         |       |  1:44 |   2.3 |
-| Move registrar into assets                                |         |       |  5:29 |   7.2 |
-| Upgrade to boost 1.70                                     |         |       | 10:00 |  13.0 |
+| Add support for meta-data overrides in Dogen              |         |       |  5:16 |   6.7 |
+| Time spent fixing emacs issues                            |         |       |  1:44 |   2.2 |
+| Move registrar into assets                                |         |       |  5:29 |   7.0 |
+| Upgrade to boost 1.70                                     |         |       | 10:00 |  12.8 |
 | Setup laptop to work on dogen                             |         |       |  0:45 |   1.0 |
-| Org-mode as a carrier format for modeling                 |         |       |  5:37 |   7.3 |
-| Add relational tracing support                            |         |       |  6:52 |   9.0 |
-| Split generated tests from manual tests                   |         |       |  3:37 |   4.7 |
+| Org-mode as a carrier format for modeling                 |         |       |  5:37 |   7.2 |
+| Add relational tracing support                            |         |       |  6:52 |   8.8 |
+| Split generated tests from manual tests                   |         |       |  5:07 |   6.5 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -225,6 +225,7 @@ Time spent creating the demo and presentation.
 
 *** STARTED Time spent producing coding videos                        :story:
     :LOGBOOK:
+    CLOCK: [2019-11-13 Wed 21:05]--[2019-11-13 Wed 21:20] =>  0:15
     CLOCK: [2019-11-13 Wed 08:18]--[2019-11-13 Wed 08:22] =>  0:04
     CLOCK: [2019-11-08 Fri 14:28]--[2019-11-08 Fri 15:00] =>  0:32
     CLOCK: [2019-11-08 Fri 09:50]--[2019-11-08 Fri 10:17] =>  0:27
@@ -1194,6 +1195,9 @@ runs. The schema should be designed with this in mind.
 
 *** STARTED Split generated tests from manual tests                   :story:
     :LOGBOOK:
+    CLOCK: [2019-11-13 Wed 21:33]--[2019-11-13 Wed 22:52] =>  1:19
+    CLOCK: [2019-11-13 Wed 21:31]--[2019-11-13 Wed 21:32] =>  0:01
+    CLOCK: [2019-11-13 Wed 21:21]--[2019-11-13 Wed 21:31] =>  0:10
     CLOCK: [2019-11-13 Wed 18:24]--[2019-11-13 Wed 18:41] =>  0:17
     CLOCK: [2019-11-13 Wed 18:10]--[2019-11-13 Wed 18:23] =>  0:13
     CLOCK: [2019-11-13 Wed 17:44]--[2019-11-13 Wed 18:09] =>  0:25
@@ -1246,8 +1250,10 @@ Notes:
       some kind of "force" approach because we can't merge or rebase
       (we do not want to carry state from previous commits). We need
       to investigate what can be done within git. For example, "undo"
-      previous commit if commit has string XYZ, merge
-      master.
+      previous commit if commit has string XYZ, merge master. Note: we
+      tried implementing this approach, but there are a lot of
+      possible states the branches can be in, and its very difficult
+      to create a script that copes with all of the permutations.
     - do not commit the state. Simply run a script that pulls latest,
       builds CLI and calls gad with overrides. Then do a regular
       nightly. The git pull will do nothing (so we can't see what
@@ -1311,6 +1317,11 @@ Basically we need a fitting name for this facet. Once found, we need
 to move all tests into this directory.
 
 Note that we cannot do the locator clean up until we sort out this mess.
+
+*** Code coverage has not been updated since September                :story:
+
+For some reason we have not been generating coverage reports for a
+couple of months.
 
 *** Create a "manual tests" stereotype with profiles                  :story:
 
