--- a/doc/agile/v1/sprint_backlog_19.org
+++ b/doc/agile/v1/sprint_backlog_19.org
@@ -12,42 +12,42 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-11-13 Wed 22:53]
+#+CAPTION: Clock summary at [2019-11-14 Thu 08:57]
 | <75>                                                      |         |       |       |       |
 | Headline                                                  | Time    |       |       |     % |
 |-----------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                              | *78:23* |       |       | 100.0 |
+| *Total time*                                              | *79:07* |       |       | 100.0 |
 |-----------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                   | 78:23   |       |       | 100.0 |
-| Active                                                    |         | 78:23 |       | 100.0 |
+| Stories                                                   | 79:07   |       |       | 100.0 |
+| Active                                                    |         | 79:07 |       | 100.0 |
 | Edit release notes for previous sprint                    |         |       |  3:36 |   4.6 |
 | Create a demo and presentation for previous sprint        |         |       |  1:39 |   2.1 |
 | Time spent producing coding videos                        |         |       |  2:11 |   2.8 |
 | Sprint and product backlog grooming                       |         |       |  6:09 |   7.8 |
 | Remove test model sanitizer                               |         |       |  0:20 |   0.4 |
 | Remove master headers                                     |         |       |  1:12 |   1.5 |
-| Fix the issues with tests in reference model              |         |       |  3:53 |   5.0 |
+| Fix the issues with tests in reference model              |         |       |  3:53 |   4.9 |
 | Update static strings to string views                     |         |       |  1:15 |   1.6 |
 | ODB include directories is incorrect                      |         |       |  1:43 |   2.2 |
-| Create a "modeling" report                                |         |       |  4:56 |   6.3 |
+| Create a "modeling" report                                |         |       |  4:56 |   6.2 |
 | Move visual studio related options to top profile         |         |       |  0:17 |   0.4 |
 | Fix incorrect message keyword when detecting ODB includes |         |       |  0:29 |   0.6 |
 | Meta-data keys are in the inverse order                   |         |       |  0:39 |   0.8 |
-| Creating reference cycles produces strange errors         |         |       |  5:32 |   7.1 |
-| Error on duplicate references                             |         |       |  0:26 |   0.6 |
+| Creating reference cycles produces strange errors         |         |       |  5:32 |   7.0 |
+| Error on duplicate references                             |         |       |  0:26 |   0.5 |
 | Generate model dependency graph                           |         |       |  1:55 |   2.4 |
 | Make the building of the relational model conditional     |         |       |  0:23 |   0.5 |
 | Make all transform contexts code-generated                |         |       |  0:08 |   0.2 |
-| Tracer numbering of dumped models is incorrect            |         |       |  0:26 |   0.6 |
+| Tracer numbering of dumped models is incorrect            |         |       |  0:26 |   0.5 |
 | Fix compilation errors in c++ impl nightly                |         |       |  0:24 |   0.5 |
 | Add support for meta-data overrides in Dogen              |         |       |  5:16 |   6.7 |
 | Time spent fixing emacs issues                            |         |       |  1:44 |   2.2 |
-| Move registrar into assets                                |         |       |  5:29 |   7.0 |
-| Upgrade to boost 1.70                                     |         |       | 10:00 |  12.8 |
-| Setup laptop to work on dogen                             |         |       |  0:45 |   1.0 |
-| Org-mode as a carrier format for modeling                 |         |       |  5:37 |   7.2 |
-| Add relational tracing support                            |         |       |  6:52 |   8.8 |
-| Split generated tests from manual tests                   |         |       |  5:07 |   6.5 |
+| Move registrar into assets                                |         |       |  5:29 |   6.9 |
+| Upgrade to boost 1.70                                     |         |       | 10:00 |  12.6 |
+| Setup laptop to work on dogen                             |         |       |  0:45 |   0.9 |
+| Org-mode as a carrier format for modeling                 |         |       |  5:37 |   7.1 |
+| Add relational tracing support                            |         |       |  6:52 |   8.7 |
+| Split generated tests from manual tests                   |         |       |  5:51 |   7.4 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -1195,6 +1195,7 @@ runs. The schema should be designed with this in mind.
 
 *** STARTED Split generated tests from manual tests                   :story:
     :LOGBOOK:
+    CLOCK: [2019-11-14 Thu 08:13]--[2019-11-14 Thu 08:57] =>  0:44
     CLOCK: [2019-11-13 Wed 21:33]--[2019-11-13 Wed 22:52] =>  1:19
     CLOCK: [2019-11-13 Wed 21:31]--[2019-11-13 Wed 21:32] =>  0:01
     CLOCK: [2019-11-13 Wed 21:21]--[2019-11-13 Wed 21:31] =>  0:10
